# OS-Assignments

./: .gitignore
1/: hello.c
1/doc/commons/: course.sty
1/doc/questions/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex
2/: practical.c
2/doc/: HW.tex
2/doc/commons/: course.sty
2/doc/questions/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex
3/Practical/: CMakeLists.txt  Practical_Q_1numbers.txt  build.sh  external.h  file_util.h  main.c  single_process.h
3/Theoretical/code/: fork-clock.c
3/Theoretical/commons/: course.sty
3/Theoretical/questions/: 1.tex  2.tex  3.tex  4.tex
4/Practical/1/: CMakeLists.txt  compile.sh  input.txt  main.c  matrix.h
4/Practical/2/: async_programming.py  result.txt  run.bat  run.sh  thread.py
4/Theoretical/: HW.tex
4/Theoretical/commons/: course.sty
4/Theoretical/questions/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex
5/Practical/: CMakeLists.txt  build.sh  main.c  pipe.h
5/Theoretical/: HW.tex
5/Theoretical/questions/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex  7.tex
6/Practical/: CMakeLists.txt  main.cpp  types.h  util.h
6/Theoretical/: HW.tex
6/Theoretical/code/: 1-condvar.c  1-sem.c  1.c  2-wrong.c  2.c  3.c
6/Theoretical/commons/: course.sty
6/Theoretical/questions/: 1.tex  2.tex  3.tex  4.tex  5.tex
7/Practical/: CMakeLists.txt  linked_list.c  linked_list.h  main.c  plotter.py  result_1.txt  result_2.txt  result_3.txt  result_4.txt  util.c  util.h
7/Theoretical/: HW.tex
7/Theoretical/codes/: cas.c
7/Theoretical/commons/: course.sty
7/Theoretical/questions/: 1.tex  2.tex  (+4 more)
8/Theoretical/: HW.tex
(+15 files in other folders)
